--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:DashBoard_WPF"
              Startup="ApplicationStart">
     <Application.Resources>
-        <ResourceDictionary Source="\Styles\UIColors.xaml"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="\Styles\UIColors.xaml"/>
+                <ResourceDictionary Source="\Styles\ButtonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
