--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -17,6 +17,15 @@
         <viewModel:MainViewModel/>
     </Window.DataContext>
 
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+            <local:HomeView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModel:CustomerViewModel}">
+            <local:CustomerView/>
+        </DataTemplate>
+    </Window.Resources>
     <Border CornerRadius="10"
         BorderThickness="1">
         <Border.BorderBrush>
@@ -67,7 +76,9 @@
                     
                     <!--Menu Button-->
                     <RadioButton Style="{StaticResource menuButon}"
-                                 Tag="{StaticResource color1}">
+                                 Tag="{StaticResource color1}"
+                                 IsChecked="True"
+                                 Command="{Binding ShowHomeViewCommand}">
                         <StackPanel Orientation="Horizontal">
                             <fa:IconImage Icon="Home" Style="{StaticResource menuButonIcon}"/>
                             <TextBlock Text="Dashboard" Style="{StaticResource menuButonText}"/>
@@ -75,7 +86,8 @@
                     </RadioButton>
 
                     <RadioButton Style="{StaticResource menuButon}"
-                                 Tag="{StaticResource color2}">
+                                 Tag="{StaticResource color2}"
+                                 Command="{Binding ShowCustomerViewCommand}">
                         <StackPanel Orientation="Horizontal">
                             <fa:IconImage Icon="UserGroup" Style="{StaticResource menuButonIcon}"/>
                             <TextBlock Text="Customers" Style="{StaticResource menuButonText}"/>
@@ -182,6 +194,76 @@
                             <fa:IconImage Icon="WindowMinimize" Width="12" Style="{StaticResource controlButonIcon}"/>
                         </Button>
                     </StackPanel>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <!--Caption--> 
+                        <StackPanel Orientation="Horizontal"
+                                    Grid.Column="0"
+                                    VerticalAlignment="Center">
+                            <fa:IconImage Icon="{Binding Icon}"
+                                          Height="20"
+                                          Width="20"
+                                          Foreground="{StaticResource titleColor2}"
+                                          Margin="35,0,10,0"/>
+                            <TextBlock Text="{Binding Caption}"
+                                       Foreground="{StaticResource titleColor2}"
+                                       FontSize="16"
+                                       FontFamily="Montserrat"
+                                       FontWeight="Medium"
+                                       VerticalAlignment="Center"/>
+                            
+                        </StackPanel>
+                        <!--User Option-->
+                        <StackPanel Orientation="Horizontal"
+                                    FlowDirection="RightToLeft"
+                                    Grid.Column="1"
+                                    VerticalAlignment="Center"
+                                    Margin="0,0,10,0">
+                            <Button Style="{StaticResource iconButon}"
+                                    Tag="{StaticResource color1}">
+                                <fa:IconImage Icon="AngleDown" 
+                                              Height="12" Width="12"
+                                              Style="{StaticResource iconButonIcon}"/>
+                            </Button>
+                            <TextBlock Text="{Binding CurrentUserAccount.DisplayName}"
+                                       Foreground="{StaticResource titleColor3}"
+                                       FontFamily="Montserrat"
+                                       FontSize="12"
+                                       VerticalAlignment="Center"/>
+                            <Ellipse Height="35" Width="35"
+                                     StrokeThickness="2"
+                                     Stroke="{StaticResource color2}"
+                                     Margin="10,0,10,0">
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="/Images/profile-picture.png"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+                            
+                            <Button Style="{StaticResource iconButon}"
+                                    Tag="{StaticResource color3}">
+                                <fa:IconImage Icon="Clock" Style="{StaticResource iconButonIcon}"/>
+                            </Button>
+
+                            <Button Style="{StaticResource iconButon}"
+                                    Tag="{StaticResource color4}">
+                                <fa:IconImage Icon="Envelope" Style="{StaticResource iconButonIcon}"/>
+                            </Button>
+                            <Button Style="{StaticResource iconButon}"
+                                    Tag="{StaticResource color5}">
+                                <fa:IconImage Icon="Bell" Style="{StaticResource iconButonIcon}"/>
+                            </Button>
+                        </StackPanel>
+                    </Grid>
+                    <!--Conten section / Child view-->
+                    <ContentControl Content="{Binding CurrenChildView}"
+                                    Grid.Row="2"
+                                    Margin="25">
+                        
+                    </ContentControl>
                 </Grid>
             </Border>
         </Grid>
